# sonasca

./: README.md  setup.cfg
midi/: player.py
resources/: README.md
