[metadata]
name=sonasca
description-file = README.md
keywords=
    openstack
    monitoring
license=Apache-2
summary=Monitor your cloud by listening to musak
author=Reynolds, Mark;Kennedy, David
author-email=david.c.kennedy@hpe.com,mark.reynolds2@hpe.com
version=0.0.1

[wheel]
universal = 1

[files]
packages =
    midi
    resources

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
autodoc_index_modules = True
